added some pages

--- a/call-request.html
+++ b/call-request.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./styles/normalize.css">
 	<link rel="stylesheet" href="./styles/main.css">
-	<link rel="stylesheet" href="./styles/our-services.css">
+	<link rel="stylesheet" href="./styles/call-request.css">
 </head>
 <body>
 	<div class="header">
@@ -79,51 +79,23 @@
 		</div>
 	</div>
 
-	<div class="services">
+	<div class="call-request">
 		<div class="container">
-			<div class="services__inner">
+			<div class="call-request__inner">
 				<h1 class="section__title">
-					Наши услуги
+					Заявка на звонок
 				</h1>
 
-				<div class="services__cards">
-					<div class="services__card services__card-img1">
-						<p>
-							Комплексное оснащение<br> 
-							медицинских помещений
-						</p>
-					</div>
-					
-					<div class="services__card services__card-img2">
-						<p>
-							Гарантийное и постгарантийное<br>
-							обслуживание медицинской техники
-						</p>
-					</div>
+				<form class="request-form">
+					<input type="text" placeholder="Имя">
+					<input type="text" placeholder="Телефон">
+					<input type="text" placeholder="Почта">
+					<button type="submit" class="request-form__button">Оставить заявку</button>
+				</form>
 
-					<div class="services__card services__card-img3">
-						<p>
-							Доставка
-						</p>
-					</div>
-
-					<div class="services__card services__card-img4">
-						<p>
-							Поставка запасных<br>
-							частей, принадлежностей,<br> 
-							расходных материалов 
-						</p>
-					</div>
-				</div>
-
-				<p class="services__text">
-					Получить подробную информацию или консультацию<br>
-					Вы можете отправив запрос нашим менеджерам
+				<p class="call-request__text">
+					Наш специалист свяжется с вами в течени часа.
 				</p>
-
-				<a href="#" class="services__button">
-					Получить консультацию
-				</a>
 			</div>
 		</div>
 	</div>
