--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
 				</h1>
 
 				<div class="brends-slider">
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo1.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo2.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo3.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo4.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo5.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo6.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo7.png">
 					</div>
-					<div class="brends-slider__item">
+					<div class="brends-slider__item brends-item">
 						<img src="./img/index-slider/brend-logo8.png">
 					</div>
 				</div>
