--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 		<div class="container">
 			<div class="about__inner">
 				<div class="left">
-					<h1 class="about__title">
+					<h1 class="section__title">
 						О нас
 					</h1>
 
