--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./styles/normalize.css">
 	<link rel="stylesheet" href="./styles/main.css">
-	<link rel="stylesheet" href="./styles/our-services.css">
+	<link rel="stylesheet" href="./styles/contacts.css">
 </head>
 <body>
 	<div class="header">
@@ -79,53 +79,53 @@
 		</div>
 	</div>
 
-	<div class="services">
+	<div class="contacts">
 		<div class="container">
-			<div class="services__inner">
-				<h1 class="section__title">
-					Наши услуги
-				</h1>
-
-				<div class="services__cards">
-					<div class="services__card services__card-img1">
-						<p>
-							Комплексное оснащение<br> 
-							медицинских помещений
-						</p>
-					</div>
-					
-					<div class="services__card services__card-img2">
-						<p>
-							Гарантийное и постгарантийное<br>
-							обслуживание медицинской техники
-						</p>
-					</div>
-
-					<div class="services__card services__card-img3">
-						<p>
-							Доставка
-						</p>
-					</div>
-
-					<div class="services__card services__card-img4">
-						<p>
-							Поставка запасных<br>
-							частей, принадлежностей,<br> 
-							расходных материалов 
-						</p>
-					</div>
-				</div>
-
-				<p class="services__text">
-					Получить подробную информацию или консультацию<br>
-					Вы можете отправив запрос нашим менеджерам
-				</p>
-
-				<a href="#" class="services__button">
-					Получить консультацию
-				</a>
+			<div class="contacts__inner">
+                <h1 class="section__title">
+                    Контакты
+                </h1>
 			</div>
-		</div>
+        </div>
+        
+        <div class="contacts__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10191.895676331578!2d37.25855435888052!3d55.931740963119324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b53f8da454ef27%3A0xf81b0d156b7d6eba!2z0YPQuy4g0JvQtdGA0LzQvtC90YLQvtCy0LAsIDU0LCDQn9C-0LTQvtC70LjQvdC-LCDQnNC-0YHQutC-0LLRgdC60LDRjyDQvtCx0LsuLCDQoNC-0YHRgdC40Y8sIDE0MTQ0MQ!5e0!3m2!1sru!2sby!4v1582821890870!5m2!1sru!2sby" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="">
+            </iframe>
+            <div class="map-form">
+                <h2 class="map-form__title">
+                    Наши контакты
+                </h2>
+
+                <p class="map-form__address">
+                    <span class="subtitle">Мы ждем Вас</span>
+                    г. Москва ул. Лермонова д. 54
+                </p>
+
+                <p class="map-form__time">
+                    <span class="subtitle">Работаем ежедневно</span> 
+                    с 8:00 до 16:00
+                </p>
+
+                <p class="map-form__questions">
+                    <span class="subtitle">Есть вопросы? Позвоните</span> 
+                        +7 (978) 55-88-987
+                </p>
+
+                <p class="map-form__text">
+                    или
+                    <br><br>
+                    Оставьте заяку на звонок 
+                </p>
+
+                <p class="map-form__phone">
+                    7-978-44-55-658
+                </p>
+
+                <button class="map-form__button">
+                   Отправить
+                </button>
+            </div>
+        </div>
 	</div>
 
 	<div class="footer">
