--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
 					<img src="./img/header/logo.png">
 				</div>
 
+				<div class="header__icon">
+					<img src="./img/header/phone.svg">
+					<img src="./img/header/burger.svg">
+				</div>1
+
 				<div class="header__info info">
 					<div class="info__item">
 						<img src="./img/header/icon-address.svg">
@@ -82,20 +87,22 @@
 	<div class="about">
 		<div class="container">
 			<div class="about__inner">
-				<div class="left">
-					<h1 class="section__title">
-						О нас
-					</h1>
-
-					<p class="about__text">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><br>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
-				</div>
+				<h1 class="section__title">
+					О нас
+				</h1>
 				
-				<div class="right">
-					<img src="./img/about/about-img.jpg" class="about__img">
+				<div class="about__content">
+					<div class="left">
+						<p class="about__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<br><br>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+					</div>
+					
+					<div class="right">
+						<img src="./img/about/about-img.jpg" class="about__img">
+					</div>
 				</div>
 			</div>
 		</div>
