added some responsive layout

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 
 				<div class="header__icon">
 					<img src="./img/header/phone.svg">
-					<img src="./img/header/burger.svg">
-				</div>1
+					<img src="./img/header/burger.svg" class="header__burger">
+				</div>
 
 				<div class="header__info info">
 					<div class="info__item">
@@ -102,6 +102,7 @@
 					
 					<div class="right">
 						<img src="./img/about/about-img.jpg" class="about__img">
+						<img src="./img/about/about-img-mobile.jpg" class="about__img--mobile">
 					</div>
 				</div>
 			</div>
