--- a/delivery.html
+++ b/delivery.html
@@ -16,6 +16,11 @@
 					<img src="./img/header/logo.png">
 				</div>
 
+				<div class="header__icon">
+					<img src="./img/header/phone.svg">
+					<img src="./img/header/burger.svg" class="header__burger">
+				</div>
+
 				<div class="header__info info">
 					<div class="info__item">
 						<img src="./img/header/icon-address.svg">
@@ -82,12 +87,12 @@
 	<div class="delivery">
 		<div class="container">
 			<div class="delivery__inner">
+				<h1 class="section__title">
+					Доставка
+				</h1>
+
 				<div class="delivery__top">
 					<div class="left">
-						<h1 class="section__title">
-							Доставка
-						</h1>
-						
 						<p class="delivery__text">	
 							<span class="delivery__subtitle">
 								Уважаемые, Клиенты!
@@ -104,6 +109,7 @@
 
 					<div class="right">
 						<img src="./img/delivery/delivery-img.jpg" class="delivery__img">
+						<img src="./img/delivery/delivery-img-movile.jpg" class="delivery__img--mobile">
 					</div>
 				</div>
 				
