--- a/call-request.html
+++ b/call-request.html
@@ -16,6 +16,11 @@
 					<img src="./img/header/logo.png">
 				</div>
 
+				<div class="header__icon">
+					<img src="./img/header/phone.svg">
+					<img src="./img/header/burger.svg" class="header__burger">
+				</div>
+
 				<div class="header__info info">
 					<div class="info__item">
 						<img src="./img/header/icon-address.svg">
@@ -94,7 +99,7 @@
 				</form>
 
 				<p class="call-request__text">
-					Наш специалист свяжется с вами в течени часа.
+					Наш специалист свяжется с вами в течени<br class="br-mobile"> часа.
 				</p>
 			</div>
 		</div>
