--- a/catalog-item.html
+++ b/catalog-item.html
@@ -16,6 +16,11 @@
 					<img src="./img/header/logo.png">
 				</div>
 
+				<div class="header__icon">
+					<img src="./img/header/phone.svg">
+					<img src="./img/header/burger.svg" class="header__burger">
+				</div>
+
 				<div class="header__info info">
 					<div class="info__item">
 						<img src="./img/header/icon-address.svg">
