--- a/meetings-item.html
+++ b/meetings-item.html
@@ -16,6 +16,11 @@
 					<img src="./img/header/logo.png">
 				</div>
 
+				<div class="header__icon">
+					<img src="./img/header/phone.svg">
+					<img src="./img/header/burger.svg" class="header__burger">
+				</div>
+
 				<div class="header__info info">
 					<div class="info__item">
 						<img src="./img/header/icon-address.svg">
@@ -91,7 +96,8 @@
                 </a>
 
                 <div class="meetings-item__body">
-                    <img src="./img/meetings-item/meetins-item-img.jpg" class="meetings-item__img">
+					<img src="./img/meetings-item/meetins-item-img.jpg" class="meetings-item__img">
+					<img src="./img/meetings-item/meetins-item-img-mobile.jpg" class="meetings-item__img--mobile">
 
                     <div class="meetings-item__wrapper-text">
                         <p class="meetings-item__text">
